# aws-profile

./: README.md  pyproject.toml
aws_profile/: __init__.py  __main__.py  cli.py
