[tool.poetry]
name = "aws-profile"
version = "0.0.1"
description = "Util for selecting an AWS Profile and setting it as your env variable"
authors = ["Konstantino Sparakis <ksparakis@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/ksparakis/aws-profile"
repository = "https://github.com/ksparakis/aws-profile"
classifiers = [
    "Development Status :: 1 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
aws-profile = 'aws_profile.cli:cli'

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
simple-term-menu = "^1.6.0"
pyperclip = "^1.8.2"


[tool.poetry.dev-dependencies]
pylint = "^2.5.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
